[package]
name = "aoc_2020"
version = "0.1.0"
authors = ["Ben Cohen <ben@cohen-family.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
aoc = { path = "aoc" }
regex = "1"

[[bin]]
name = "day8"
path = "src/day8.rs"